rppGrammar/lineParser.java
// Generated from C:\Users\bassel\Dropbox\ReadablePlusPlus\antlr\rppgrammar\line.g4 by ANTLR 4.3
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class lineParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__2=1, T__1=2, T__0=3, Spaces=4, Pointers=5, ID=6, ANSA=7, Digit=8, Nondigit=9, 
		NewLine=10, LeftParen=11, RightParen=12, LeftBrace=13, RightBrace=14, 
		Thing=15;
	public static final String[] tokenNames = {
		"<INVALID>", "'\t'", "' '", "'='", "Spaces", "Pointers", "ID", "ANSA", 
		"Digit", "Nondigit", "NewLine", "'('", "')'", "'{'", "'}'", "'|'"
	};
	public static final int
		RULE_lineTabs = 0, RULE_tabs = 1, RULE_type = 2, RULE_name = 3, RULE_program = 4, 
		RULE_assign = 5, RULE_multipleDeclare = 6, RULE_closedItem = 7, RULE_lineDeclare = 8, 
		RULE_lineAssign = 9, RULE_linemix = 10, RULE_stuffList = 11, RULE_functionCall = 12;
	public static final String[] ruleNames = {
		"lineTabs", "tabs", "type", "name", "program", "assign", "multipleDeclare", 
		"closedItem", "lineDeclare", "lineAssign", "linemix", "stuffList", "functionCall"
	};

	@Override
	public String getGrammarFileName() { return "line.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public lineParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class LineTabsContext extends ParserRuleContext {
		public TabsContext tabs() {
			return getRuleContext(TabsContext.class,0);
		}
		public TerminalNode NewLine(int i) {
			return getToken(lineParser.NewLine, i);
		}
		public List<TerminalNode> NewLine() { return getTokens(lineParser.NewLine); }
		public LineTabsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lineTabs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof lineListener ) ((lineListener)listener).enterLineTabs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof lineListener ) ((lineListener)listener).exitLineTabs(this);
		}
	}

	public final LineTabsContext lineTabs() throws RecognitionException {
		LineTabsContext _localctx = new LineTabsContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_lineTabs);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(27); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(26); match(NewLine);
				}
				}
				setState(29); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NewLine );
			setState(31); tabs();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TabsContext extends ParserRuleContext {
		public TabsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tabs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof lineListener ) ((lineListener)listener).enterTabs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof lineListener ) ((lineListener)listener).exitTabs(this);
		}
	}

	public final TabsContext tabs() throws RecognitionException {
		TabsContext _localctx = new TabsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_tabs);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(34); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(33); match(T__2);
				}
				}
				setState(36); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__2 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public List<TerminalNode> Pointers() { return getTokens(lineParser.Pointers); }
		public TerminalNode ID() { return getToken(lineParser.ID, 0); }
		public TerminalNode Pointers(int i) {
			return getToken(lineParser.Pointers, i);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof lineListener ) ((lineListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof lineListener ) ((lineListener)listener).exitType(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38); match(ID);
			setState(42);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Pointers) {
				{
				{
				setState(39); match(Pointers);
				}
				}
				setState(44);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NameContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(lineParser.ID, 0); }
		public NameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof lineListener ) ((lineListener)listener).enterName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof lineListener ) ((lineListener)listener).exitName(this);
		}
	}

	public final NameContext name() throws RecognitionException {
		NameContext _localctx = new NameContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45); match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(lineParser.EOF, 0); }
		public List<AssignContext> assign() {
			return getRuleContexts(AssignContext.class);
		}
		public AssignContext assign(int i) {
			return getRuleContext(AssignContext.class,i);
		}
		public TerminalNode NewLine(int i) {
			return getToken(lineParser.NewLine, i);
		}
		public List<TerminalNode> NewLine() { return getTokens(lineParser.NewLine); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof lineListener ) ((lineListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof lineListener ) ((lineListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_program);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NewLine) {
				{
				{
				setState(47); match(NewLine);
				}
				}
				setState(52);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(53); assign();
			setState(62);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(55); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(54); match(NewLine);
						}
						}
						setState(57); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==NewLine );
					setState(59); assign();
					}
					} 
				}
				setState(64);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			setState(68);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NewLine) {
				{
				{
				setState(65); match(NewLine);
				}
				}
				setState(70);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(71); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignContext extends ParserRuleContext {
		public ClosedItemContext closedItem() {
			return getRuleContext(ClosedItemContext.class,0);
		}
		public LineDeclareContext lineDeclare() {
			return getRuleContext(LineDeclareContext.class,0);
		}
		public LinemixContext linemix(int i) {
			return getRuleContext(LinemixContext.class,i);
		}
		public List<LinemixContext> linemix() {
			return getRuleContexts(LinemixContext.class);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<LineAssignContext> lineAssign() {
			return getRuleContexts(LineAssignContext.class);
		}
		public List<LineTabsContext> lineTabs() {
			return getRuleContexts(LineTabsContext.class);
		}
		public LineAssignContext lineAssign(int i) {
			return getRuleContext(LineAssignContext.class,i);
		}
		public LineTabsContext lineTabs(int i) {
			return getRuleContext(LineTabsContext.class,i);
		}
		public AssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof lineListener ) ((lineListener)listener).enterAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof lineListener ) ((lineListener)listener).exitAssign(this);
		}
	}

	public final AssignContext assign() throws RecognitionException {
		AssignContext _localctx = new AssignContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_assign);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(73); type();
			setState(109);
			switch (_input.LA(1)) {
			case Thing:
				{
				setState(74); match(Thing);
				setState(81);
				switch (_input.LA(1)) {
				case T__1:
					{
					setState(76); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(75); match(T__1);
						}
						}
						setState(78); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==T__1 );
					}
					break;
				case NewLine:
					{
					setState(80); lineTabs();
					}
					break;
				case ID:
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(93);
				switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
				case 1:
					{
					setState(83); lineAssign();
					}
					break;

				case 2:
					{
					setState(84); lineDeclare();
					setState(91);
					_la = _input.LA(1);
					if (_la==T__1) {
						{
						setState(86); 
						_errHandler.sync(this);
						_la = _input.LA(1);
						do {
							{
							{
							setState(85); match(T__1);
							}
							}
							setState(88); 
							_errHandler.sync(this);
							_la = _input.LA(1);
						} while ( _la==T__1 );
						setState(90); linemix();
						}
					}

					}
					break;
				}
				}
				break;
			case T__1:
			case LeftBrace:
				{
				setState(98);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__1) {
					{
					{
					setState(95); match(T__1);
					}
					}
					setState(100);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(101); closedItem();
				setState(103); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(102); match(T__1);
					}
					}
					setState(105); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==T__1 );
				setState(107); linemix();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(118);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,16,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(111); lineTabs();
					setState(114);
					switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
					case 1:
						{
						setState(112); linemix();
						}
						break;

					case 2:
						{
						setState(113); lineAssign();
						}
						break;
					}
					}
					} 
				}
				setState(120);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,16,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MultipleDeclareContext extends ParserRuleContext {
		public NameContext name(int i) {
			return getRuleContext(NameContext.class,i);
		}
		public List<NameContext> name() {
			return getRuleContexts(NameContext.class);
		}
		public MultipleDeclareContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multipleDeclare; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof lineListener ) ((lineListener)listener).enterMultipleDeclare(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof lineListener ) ((lineListener)listener).exitMultipleDeclare(this);
		}
	}

	public final MultipleDeclareContext multipleDeclare() throws RecognitionException {
		MultipleDeclareContext _localctx = new MultipleDeclareContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_multipleDeclare);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(121); name();
			setState(124); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(122); match(T__1);
					setState(123); name();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(126); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,17,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClosedItemContext extends ParserRuleContext {
		public MultipleDeclareContext multipleDeclare() {
			return getRuleContext(MultipleDeclareContext.class,0);
		}
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public TerminalNode ANSA() { return getToken(lineParser.ANSA, 0); }
		public ClosedItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_closedItem; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof lineListener ) ((lineListener)listener).enterClosedItem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof lineListener ) ((lineListener)listener).exitClosedItem(this);
		}
	}

	public final ClosedItemContext closedItem() throws RecognitionException {
		ClosedItemContext _localctx = new ClosedItemContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_closedItem);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128); match(LeftBrace);
			setState(165);
			switch ( getInterpreter().adaptivePredict(_input,23,_ctx) ) {
			case 1:
				{
				setState(132);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__1) {
					{
					{
					setState(129); match(T__1);
					}
					}
					setState(134);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(135); multipleDeclare();
				setState(139);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__1) {
					{
					{
					setState(136); match(T__1);
					}
					}
					setState(141);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(142); match(T__0);
				setState(146);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__1) {
					{
					{
					setState(143); match(T__1);
					}
					}
					setState(148);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(149); match(ANSA);
				}
				break;

			case 2:
				{
				setState(154);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__1) {
					{
					{
					setState(151); match(T__1);
					}
					}
					setState(156);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(157); name();
				setState(159); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(158); match(T__1);
					}
					}
					setState(161); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==T__1 );
				setState(163); match(ANSA);
				}
				break;
			}
			setState(167); match(RightBrace);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LineDeclareContext extends ParserRuleContext {
		public MultipleDeclareContext multipleDeclare() {
			return getRuleContext(MultipleDeclareContext.class,0);
		}
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public LineDeclareContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lineDeclare; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof lineListener ) ((lineListener)listener).enterLineDeclare(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof lineListener ) ((lineListener)listener).exitLineDeclare(this);
		}
	}

	public final LineDeclareContext lineDeclare() throws RecognitionException {
		LineDeclareContext _localctx = new LineDeclareContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_lineDeclare);
		try {
			setState(171);
			switch ( getInterpreter().adaptivePredict(_input,24,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(169); name();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(170); multipleDeclare();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LineAssignContext extends ParserRuleContext {
		public FunctionCallContext functionCall() {
			return getRuleContext(FunctionCallContext.class,0);
		}
		public LineDeclareContext lineDeclare() {
			return getRuleContext(LineDeclareContext.class,0);
		}
		public TerminalNode ANSA() { return getToken(lineParser.ANSA, 0); }
		public LineAssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lineAssign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof lineListener ) ((lineListener)listener).enterLineAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof lineListener ) ((lineListener)listener).exitLineAssign(this);
		}
	}

	public final LineAssignContext lineAssign() throws RecognitionException {
		LineAssignContext _localctx = new LineAssignContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_lineAssign);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(173); lineDeclare();
			{
			setState(177);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(174); match(T__1);
				}
				}
				setState(179);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(180); match(T__0);
			setState(184);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(181); match(T__1);
				}
				}
				setState(186);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(189);
			switch (_input.LA(1)) {
			case ANSA:
				{
				setState(187); match(ANSA);
				}
				break;
			case ID:
			case LeftParen:
				{
				setState(188); functionCall();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LinemixContext extends ParserRuleContext {
		public ClosedItemContext closedItem(int i) {
			return getRuleContext(ClosedItemContext.class,i);
		}
		public List<ClosedItemContext> closedItem() {
			return getRuleContexts(ClosedItemContext.class);
		}
		public LineDeclareContext lineDeclare(int i) {
			return getRuleContext(LineDeclareContext.class,i);
		}
		public List<LineDeclareContext> lineDeclare() {
			return getRuleContexts(LineDeclareContext.class);
		}
		public LinemixContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_linemix; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof lineListener ) ((lineListener)listener).enterLinemix(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof lineListener ) ((lineListener)listener).exitLinemix(this);
		}
	}

	public final LinemixContext linemix() throws RecognitionException {
		LinemixContext _localctx = new LinemixContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_linemix);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(193);
			switch (_input.LA(1)) {
			case LeftBrace:
				{
				setState(191); closedItem();
				}
				break;
			case ID:
				{
				setState(192); lineDeclare();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(206);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(196); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(195); match(T__1);
					}
					}
					setState(198); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==T__1 );
				setState(202);
				switch (_input.LA(1)) {
				case LeftBrace:
					{
					setState(200); closedItem();
					}
					break;
				case ID:
					{
					setState(201); lineDeclare();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				}
				setState(208);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StuffListContext extends ParserRuleContext {
		public TerminalNode ANSA(int i) {
			return getToken(lineParser.ANSA, i);
		}
		public List<FunctionCallContext> functionCall() {
			return getRuleContexts(FunctionCallContext.class);
		}
		public FunctionCallContext functionCall(int i) {
			return getRuleContext(FunctionCallContext.class,i);
		}
		public List<TerminalNode> ANSA() { return getTokens(lineParser.ANSA); }
		public StuffListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stuffList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof lineListener ) ((lineListener)listener).enterStuffList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof lineListener ) ((lineListener)listener).exitStuffList(this);
		}
	}

	public final StuffListContext stuffList() throws RecognitionException {
		StuffListContext _localctx = new StuffListContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_stuffList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(214);
			switch (_input.LA(1)) {
			case ANSA:
				{
				setState(209); match(ANSA);
				}
				break;
			case LeftParen:
				{
				setState(210); match(LeftParen);
				setState(211); functionCall();
				setState(212); match(RightParen);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(226);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(216); match(T__1);
				setState(222);
				switch (_input.LA(1)) {
				case ANSA:
					{
					setState(217); match(ANSA);
					}
					break;
				case LeftParen:
					{
					setState(218); match(LeftParen);
					setState(219); functionCall();
					setState(220); match(RightParen);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				}
				setState(228);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionCallContext extends ParserRuleContext {
		public StuffListContext stuffList() {
			return getRuleContext(StuffListContext.class,0);
		}
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public FunctionCallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionCall; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof lineListener ) ((lineListener)listener).enterFunctionCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof lineListener ) ((lineListener)listener).exitFunctionCall(this);
		}
	}

	public final FunctionCallContext functionCall() throws RecognitionException {
		FunctionCallContext _localctx = new FunctionCallContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_functionCall);
		try {
			setState(237);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(229); name();
				setState(230); match(T__1);
				setState(231); stuffList();
				}
				break;
			case LeftParen:
				enterOuterAlt(_localctx, 2);
				{
				setState(233); match(LeftParen);
				setState(234); name();
				setState(235); match(RightParen);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}